# SimplSouffleExample

./: .gitignore  LICENSE  README.md  SIMPL_EXAMPLE.cabal  cabal.project  cabal.project.freeze  shell.nix  simpl.dl
app/: Main.hs
