cabal-version:      3.0
name:               SIMPExample
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             George Crary
maintainer:         tcrary@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable SIMP_Example
    import:           warnings
    main-is:          Main.hs

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Weverything -Wno-safe -Wno-unsafe -Wno-implicit-prelude -Wno-missed-specializations -Wno-all-missed-specializations -Wno-missing-import-lists -Wno-type-defaults -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-missing-deriving-strategies -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode -optP-Wno-nonportable-include-path -fhide-source-paths -fno-show-valid-hole-fits -fno-sort-valid-hole-fits
    build-depends:    base ^>=4.14.3.0
                     ,pretty-show >= 1.10 && < 1.11
                     ,souffle-haskell >= 3.5.1 && < 3.6
                     ,mtl >= 2.2.2 && < 2.3
    if os(linux)
      extra-libraries:
      stdc++
